--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/jee-comment.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/jee-comment.component.html
@@ -1,10 +1,13 @@
 <div class="card-body comment-container">
   <div class="comment-header-container">
-    <div *ngIf="!hiddenLike" class="comment-header">
+    <div *ngIf="!hiddenLike" class="comment-header comment-header-like">
+      <div class="comment-header-reaction">
+        <jeecomment-reaction-content></jeecomment-reaction-content>
+      </div>
       <mat-icon data-visualcompletion="css-img" class="icon-like item-align-middle"></mat-icon>
       <span style="vertical-align: bottom;"> Thích </span>
     </div>
-    <div class="comment-header">
+    <div class="comment-header" (click)="clickButtonComment()">
       <mat-icon data-visualcompletion="css-img" class="item-align-middle" id="icon-comment"></mat-icon>
       <span style="vertical-align: bottom;"> Bình Luận </span>
     </div>
@@ -13,84 +16,44 @@
       <span style="vertical-align: bottom;"> Chia Sẻ </span>
     </div>
   </div>
-  <div class="comment-content-container">
-    <div class="comment-filter">
-      <div class="view-more-comment">
-        <span class="text-view-more-comment">Xem thêm bình luận</span>
-      </div>
-      <div class="filter">
-        <span class="text-filter">Toàn bộ bình luận </span>
-        <i data-visualcompletion="css-img" class="item-align-middle" id="filter-icon"></i>
-      </div>
-    </div>
-    <div class="post-comment">
-      <div class="post-comment-avatar">
-        <img id="img-avatar"
-          src="https://scontent.fhph1-2.fna.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?_nc_cat=1&ccb=1-3&_nc_sid=7206a8&_nc_ohc=qV3loY0JnC0AX-qMbjn&_nc_oc=AQkuTY2hl5gClakxdwuSeg8oKtlYtYL3BQovbftuPGDpsS0nASl84X99PgdvP_zFy24&_nc_ht=scontent.fhph1-2.fna&oh=e7e8b5438248aa379e7f27abb99539f3&oe=60CC4378">
-      </div>
-      <div class="post-comment-input">
-        <textarea [(value)]="input" placeholder="Viết bình luận" class="textarea-input" cdkTextareaAutosize></textarea>
-        <ul class="comment-icon">
-          <li class="icon"><span>
-              <div role="button" tabindex="0"><i id="emotion-icon"></i>
-              </div>
-            </span></li>
-          <li class="icon"><span>
-              <div role="button" tabindex="0"><i id="image-icon"></i>
-              </div>
-            </span><input id="input-flie"
-              accept="video/*,  video/x-m4v, video/webm, video/x-ms-wmv, video/x-msvideo, video/3gpp, video/flv, video/x-flv, video/mp4, video/quicktime, video/mpeg, video/ogv, .ts, .mkv, image/*, image/heic, image/heif"
-              type="file"></li>
-        </ul>
-      </div>
-    </div>
-    <ul class="post-comment-content">
-      <li class="list-comment">
-        <div class="post-comment">
-          <div class="post-comment-avatar">
-            <img id="img-avatar"
-              src="https://scontent.fhph1-2.fna.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?_nc_cat=1&ccb=1-3&_nc_sid=7206a8&_nc_ohc=qV3loY0JnC0AX-qMbjn&_nc_oc=AQkuTY2hl5gClakxdwuSeg8oKtlYtYL3BQovbftuPGDpsS0nASl84X99PgdvP_zFy24&_nc_ht=scontent.fhph1-2.fna&oh=e7e8b5438248aa379e7f27abb99539f3&oe=60CC4378">
-          </div>
-          <div class="post-comment-input">
-            <div class="comment-name-title">
-              <span class="name">
-                Bùi Thanh Phong
-              </span>
-              <!-- <span class="title">
-                Dev
-              </span> -->
-            </div>
-            <span class="input-comment-span">{{input}}</span>
-          </div>
-          <div class="icon-edit-report">
-            <span>
-              <div class="hover-icon" role="button" tabindex="0">
-                <span class="show-when-hover">
-                  <i aria-hidden="true" id="edit-report-icon"></i>
-                </span>
-              </div>
-            </span>
-          </div>
+  <div *ngIf="ShowSpinner$.asObservable()| async; else loading" class="click-show-spinner" [class.spinner]="true">
+  </div>
+  <ng-template #loading>
+    <div class="comment-content-container" *ngIf="(items$ | async)">
+      <div class="comment-filter" *ngIf="(ShowFilter$.asObservable()| async)">
+        <div class="view-more-comment">
+          <span class="text-filter">
+            Xem thêm bình luận</span>
         </div>
-        <div class="reply-comment">
-          <ul class="comment-icon reply-comment-action">
-            <li class="reply-comment-icon">
-              <mat-icon data-visualcompletion="css-img" class="icon-like item-align-middle"></mat-icon>
-              <span> Thích </span>
-            </li>
-            <li class="reply-comment-reply">
-              <span>
-                Trả lời
-              </span>
-            </li>
-            <li class="reply-comment-time">
-              <span>
-                20/06/2021 12:00
-              </span>
-            </li>
+        <div class="filter">
+          <span>Toàn bộ bình luận </span>
+          <i data-visualcompletion="css-img" class="item-align-middle" id="filter-icon"></i>
+        </div>
+      </div>
+      <ng-container *ngFor="let item of lstComment$ |async">
+        <jeecomment-post-comment-content [ObjectID]="objectID" [Comment]="item" [ShowAllReply]="item.LengthReply <= 3">
+        </jeecomment-post-comment-content>
+      </ng-container>
+      <div class="post-comment" *ngIf="service.mainUser">
+        <div class="post-comment-avatar">
+          <img id="img-avatar" src="{{service.mainUser.AvartarImgURL}}">
+        </div>
+        <div class="post-comment-input">
+          <textarea (keydown)="onKeydown($event)" (keyup.enter)="ValidateCommentAndPost()"
+            [(ngModel)]="postComment.Text" placeholder="Viết bình luận" class="textarea-input"
+            cdkTextareaAutosize></textarea>
+          <ul class="comment-icon">
+            <li class="icon"><span>
+                <div role="button" tabindex="0"><i id="emotion-icon"></i>
+                </div>
+              </span></li>
+            <li class="icon"><span>
+                <div role="button" tabindex="0"><i id="image-icon"></i>
+                </div>
+              </span><input id="input-flie" accept="image/*, image/heic, image/heif" type="file"></li>
           </ul>
         </div>
-      </li>
-    </ul>
-  </div>
+      </div>
+    </div>
+  </ng-template>
 </div>
