--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/jee-comment.scss
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/jee-comment.scss
@@ -5,24 +5,25 @@ $hover-color: #f2f2f2;
 $background-comment: white;
 $icon-color: black;
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
 .card-body {
   padding: 0px 10px 20px 10px;
 }
 
 .comment-container {
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  color: rgb(28, 30, 33);
   position: relative;
   box-sizing: border-box;
   flex-direction: column;
   align-items: stretch;
   direction: ltr;
   margin: 0px;
-  border-radius: 0px 0px 18px 18px;
+  border-radius: max(0px, min(8px, ((100vw - 4px) - 100%) * 9999)) 8px;
   background-color: $background-comment;
   display: block;
   line-height: 16.08px;
@@ -59,38 +60,6 @@ ul {
   font-family: "Roboto";
 }
 
-.icon-like {
-  background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/ym/r/2VNwseEvSnT.png);
-  background-position: -17px -353px;
-  background-size: auto;
-  width: 18px;
-  height: 18px;
-  background-repeat: no-repeat;
-  display: inline-block;
-  padding-right: 22px;
-}
-
-#icon-comment {
-  background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/yD/r/mszNyGGthUg.png);
-  background-position: 0px -134px;
-  background-size: auto;
-  width: 18px;
-  height: 18px;
-  background-repeat: no-repeat;
-  display: inline-block;
-  padding-right: 22px;
-}
-#icon-share {
-  background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/ya/r/LEGnmY9XGzE.png);
-  background-position: 0px -281px;
-  background-size: auto;
-  width: 18px;
-  height: 18px;
-  background-repeat: no-repeat;
-  display: inline-block;
-  padding-right: 22px;
-}
-
 .comment-header:hover {
   background-color: $hover-color;
   border-radius: 8px;
@@ -119,41 +88,25 @@ ul {
   vertical-align: middle;
   align-items: center;
   font-size: 15px;
-  font-weight: 500;
   text-align: start;
+  color: rbg(101, 103, 107);
+  font-weight: 500;
 }
 
-.filter {
-  .text-filter {
-    color: rbg(101, 103, 107);
-  }
+.text-filter {
+  color: rbg(101, 103, 107);
+  font-weight: 500;
 }
 
-#filter-icon {
-  background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/yv/r/KSxvuHrz0Mh.png);
-  background-position: -51px -433px;
-  background-size: auto;
-  width: 16px;
-  height: 16px;
-  background-repeat: no-repeat;
-  display: inline-block;
+.text-filter:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
+
 .view-more-comment {
   flex-basis: auto;
   flex-grow: 1;
   flex-shrink: 1;
-
-  .text-view-more-comment {
-    color: rbg(101, 103, 107);
-  }
-}
-
-.view-more-comment:hover {
-  cursor: pointer;
-
-  .text-view-more-comment {
-    text-decoration: underline;
-  }
 }
 
 .post-comment {
@@ -173,12 +126,6 @@ ul {
   margin-right: 6px;
   align-self: flex-start;
   margin-top: 6px;
-}
-
-#img-avatar {
-  border-radius: 50%;
-  width: 32px;
-  height: 32px;
 }
 
 .post-comment-input {
@@ -237,73 +184,79 @@ ul {
     width: 16px;
     height: 16px;
   }
+}
 
+.comment-header-reaction {
+  display: block;
+  direction: ltr;
+  overflow-wrap: break-word;
+  position: absolute;
+  z-index: 0;
+  transform: translate(0px, 7px) translate(0px, -100%);
+}
+
+.comment-header-like:hover > .comment-header-reaction {
+  visibility: visible;
+}
+
+.comment-header-reaction {
+  visibility: hidden;
+}
+
+#img-avatar {
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
 }
 
 #input-flie {
   display: none;
 }
 
-.post-comment-content {
-  margin-top: 6px;
+.icon-like {
+  background-image: url(https://cdn.jee.vn/jee-comment/icons/facebook-comment-header/like.png);
+  background-position: -17px -353px;
+  background-size: auto;
+  width: 18px;
+  height: 18px;
+  background-repeat: no-repeat;
+  display: inline-block;
+  padding-right: 22px;
 }
 
-.list-comment {
-  .icon-edit-report {
-    display: flex;
-    width: 32px;
-    height: 32px;
-    vertical-align: middle;
-    align-items: center;
-    justify-content: center;
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-
-  .post-comment-input {
-    flex-grow: 0;
-    display: flex;
-    flex-direction: column;
-
-    .post-comment-input-span {
-      font-weight: normal;
-      font-family: "Roboto";
-    }
-  }
-
-  .name {
-    font-weight: 500;
-    color: black;
-  }
+#icon-comment {
+  background-image: url(https://cdn.jee.vn/jee-comment/icons/facebook-comment-header/comment.png);
+  background-position: 0px -134px;
+  background-size: auto;
+  width: 18px;
+  height: 18px;
+  background-repeat: no-repeat;
+  display: inline-block;
+  padding-right: 22px;
+}
+#icon-share {
+  background-image: url(https://cdn.jee.vn/jee-comment/icons/facebook-comment-header/share.png);
+  background-position: 0px -281px;
+  background-size: auto;
+  width: 18px;
+  height: 18px;
+  background-repeat: no-repeat;
+  display: inline-block;
+  padding-right: 22px;
 }
 
-.reply-comment {
-  display: block;
-}
-
-.hover-icon {
-  padding: 5px;
-}
-.hover-icon:hover {
-  padding: 5px;
-  border-radius: 50%;
-  background-color: $hover-color;
-}
-
-.hover-icon:hover > .show-when-hover {
-  visibility: visible;
-}
-
-.show-when-hover {
-  visibility: hidden;
-}
-
-.item-align-middle {
-  vertical-align: middle;
+#filter-icon {
+  background-image: url(https://cdn.jee.vn/jee-comment/icons/facebook-comment-header/filter.png);
+  background-position: -17px -467px;
+  background-size: auto;
+  width: 16px;
+  height: 16px;
+  background-repeat: no-repeat;
+  display: inline-block;
 }
 
 #emotion-icon {
-  background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/yD/r/mszNyGGthUg.png);
+  background-image: url(https://cdn.jee.vn/jee-comment/icons/facebook-comment-header/emotion.png);
   background-position: 0px -346px;
   background-size: auto;
   width: 16px;
@@ -313,7 +266,7 @@ ul {
 }
 
 #image-icon {
-  background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/yD/r/mszNyGGthUg.png);
+  background-image: url(https://cdn.jee.vn/jee-comment/icons/facebook-comment-header/comment.png);
   background-position: 0px -295px;
   background-size: auto;
   width: 16px;
@@ -322,12 +275,26 @@ ul {
   display: inline-block;
 }
 
-#edit-report-icon {
-  background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/y5/r/iK6-AgQFN6d.png);
-  background-position: -17px -366px;
-  background-size: auto;
-  width: 16px;
-  height: 13px;
-  background-repeat: no-repeat;
-  display: inline-block;
+.click-show-spinner {
+  height: 30px;
+}
+
+@keyframes spinnercustom {
+  to {transform: rotate(360deg);}
+}
+
+.spinner:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  //border: 2px solid #ffffff;
+  //border-top-color: #000000;
+  animation: spinnercustom .8s linear infinite;
 }
