--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/page-girdters-dashboard/widgets/danh-sach-truy-cap-nhanh/danh-sach-truy-cap-nhanh.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/page-girdters-dashboard/widgets/danh-sach-truy-cap-nhanh/danh-sach-truy-cap-nhanh.component.html
@@ -64,5 +64,5 @@
   </perfect-scrollbar>
 </div> -->
 <div class="card card-custom">
-  <app-jee-comment></app-jee-comment>
+  <app-jee-comment  [objectID]="topicObjectID$ | async"></app-jee-comment>
 </div>
