--- a/BackEnd/JeeAccount/src/styles.scss
+++ b/BackEnd/JeeAccount/src/styles.scss
@@ -28,6 +28,8 @@
 @import './assets/sass/themes/layout/brand/dark.scss';
 @import './assets/sass/themes/layout/aside/dark.scss';
 
+@import '~@ctrl/ngx-emoji-mart/picker';
+
 // Header themes
 // .header-base-light {
 //     @import "./assets/sass/themes/layout/header/base/light.scss";
