--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/post-comment-content/post-comment-content.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/post-comment-content/post-comment-content.component.html
@@ -1,4 +1,4 @@
-<ul class="post-comment-content" *ngIf="comment">
+<ul class="post-comment-content" *ngIf="comment && objectID">
   <li class="list-comment">
     <div class="post-comment">
       <div class="post-comment-avatar">
@@ -85,10 +85,11 @@
       </div>
     </ng-container>
     <ng-container *ngIf="ClickShowReply$.asObservable() | async">
-      <jeecomment-post-comment-content *ngFor="let reply of comment.Replies" [comment]="reply" [objectID]="objectID">
+      <jeecomment-post-comment-content (isFocus)="getFocus($event)" *ngFor=" let reply of comment.Replies"
+        [comment]="reply" [objectID]="objectID" [isReply]="true">
       </jeecomment-post-comment-content>
-      <jeecomment-enter-comment-content *ngIf="(showEnterComment$.asObservable()) | async " [objectID]="objectID"
-        [commentID]="comment.Id">
+      <jeecomment-enter-comment-content [isFocus$]="isFocus$$" *ngIf="((showEnterComment$.asObservable()) | async) && !isReply"
+        [objectID]="objectID" [commentID]="comment.Id">
       </jeecomment-enter-comment-content>
     </ng-container>
   </li>
