--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/enter-comment-content/enter-comment-content.scss
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/enter-comment-content/enter-comment-content.scss
@@ -65,6 +65,7 @@ $color-hover-x-button: #1ebcc5;
 .post-comment-cancle {
   font-family: 'Roboto';
   padding-left: 48px;
+  text-align: start;
 }
 
 .span-cancel-comment {
