--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/page-girdters-dashboard/widgets/danh-sach-truy-cap-nhanh/danh-sach-truy-cap-nhanh.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/page-girdters-dashboard/widgets/danh-sach-truy-cap-nhanh/danh-sach-truy-cap-nhanh.component.html
@@ -42,7 +42,7 @@
     padding: 0;
   }
 </style>
-<!-- <div class="card card-custom" style="color: #4169e1;">
+<div class="card card-custom" style="color: #4169e1;">
   <perfect-scrollbar class="m-scrollable m-scroller">
     <div class="m-form" *ngIf="listTruyCap.length > 0" style="display: grid;">
       <div class="row row-class" style="margin: 10px;">
@@ -68,10 +68,4 @@
       </div>
     </div>
   </perfect-scrollbar>
-</div> -->
-<div class="card card-custom">
-  <cdk-virtual-scroll-viewport itemSize="10" class="viewport" style="height:800px;">
-    <app-jee-comment *cdkVirtualFor="let item of numbers" [number]="item" [showCommentDefault]="true"
-      [objectID]="topicObjectID$.asObservable() | async"></app-jee-comment>
-  </cdk-virtual-scroll-viewport>
 </div>
