fix lỗi tạo customer thiếu appCode khi tạo thành công app jeehr

--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/jee-comment.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/jee-comment.component.html
@@ -32,7 +32,7 @@
   <ng-template #loading>
     <div class="comment-content-container" *ngIf="item">
       <ng-container>
-        <div class="comment-filter">
+        <div class="comment-filter" *ngIf="ViewLengthComment < item.TotalLengthComment">
           <div class="view-more-comment">
             <span (click)="viewMoreComment()" class="text-filter">
               Xem thêm bình luận
