--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/DemoComemnt/demo-comment.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/DemoComemnt/demo-comment.component.html
@@ -1,11 +1,19 @@
-<div class="card card-custom" style="background-color: rgb(36, 37, 38);">
-  <cdk-virtual-scroll-viewport *ngIf="topicObjectID$.asObservable() | async" itemSize="0.1" class="viewport"
-    style="height:888px; text-align: center;">
-    <div style="height: auto; width: 680px; display: inline-block;">
-      <app-jee-comment *cdkVirtualFor="let item of numbers; let i = index" [img]="imgsurl[i].download_url"
-        [number]="item" [showCommentDefault]="false" [objectID]="topicObjectID$.asObservable() | async">
+<div class="card card-custom" style="background-color: rgb(36, 37, 38)">
+  <cdk-virtual-scroll-viewport
+    *ngIf="topicObjectID$.asObservable() | async"
+    itemSize="0.1"
+    class="viewport"
+    style="height: 888px; text-align: center"
+  >
+    <div style="height: auto; width: 680px; display: inline-block">
+      <app-jee-comment
+        *cdkVirtualFor="let item of numbers; let i = index"
+        [img]="imgsurl[i].download_url"
+        [number]="item"
+        [showCommentDefault]="true"
+        [objectID]="topicObjectID$.asObservable() | async"
+      >
       </app-jee-comment>
     </div>
   </cdk-virtual-scroll-viewport>
 </div>
-
