--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-list/account-management-list.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-list/account-management-list.component.html
@@ -10,24 +10,39 @@
   <!-- body -->
   <div class="card-body">
     <div class="table-responsive angular-bootstrap-table" [ngStyle]="{ height: getHeight() }">
-      <table mat-table class=" table table-head-custom table-vertical-center overflow-hidden " [dataSource]="dataSource"
-        matSort matSortActive="Fullname" matSortDirection="asc" matSortDisableClear>
+      <table
+        mat-table
+        class="table table-head-custom table-vertical-center overflow-hidden"
+        [dataSource]="dataSource"
+        matSort
+        matSortActive="Fullname"
+        matSortDirection="asc"
+        matSortDisableClear
+      >
         <ng-container matColumnDef="NhanVien">
           <th *matHeaderCellDef>
             <span>Nhân viên</span>
           </th>
           <td mat-cell *matCellDef="let r">
             <div class="row jee-avatar">
-              <span (click)="hiddenfileinput.click()" style="cursor: pointer;">
-                <ngx-avatar size="40" src="{{r.Avatar}}" *ngIf="r.Avatar"></ngx-avatar>
-                <ngx-avatar size="40" [name]="r.Name" bgColor="#FF0000" *ngIf="!r.Avatar"></ngx-avatar>
+              <span (click)="hiddenfileinput.click()" style="cursor: pointer">
+                <ngx-avatar [size]="40" src="{{ r.Avatar }}" *ngIf="r.Avatar"></ngx-avatar>
+                <ngx-avatar [size]="40" [name]="r.Name" bgColor="#FF0000" *ngIf="!r.Avatar"></ngx-avatar>
               </span>
               <span class="jee-name">
-                {{r.Fullname}}
+                {{ r.Fullname }}
               </span>
             </div>
-            <input style="display: none;" accept="image/jpg, image/jpeg, image/png" name="Image" id="file" type="file"
-              class="form-control" (change)="onFileChange($event, r.Username)" #hiddenfileinput>
+            <input
+              style="display: none"
+              accept="image/jpg, image/jpeg, image/png"
+              name="Image"
+              id="file"
+              type="file"
+              class="form-control"
+              (change)="onFileChange($event, r.Username)"
+              #hiddenfileinput
+            />
           </td>
         </ng-container>
 
@@ -55,8 +70,8 @@
           <th *matHeaderCellDef style="text-align: center">
             <span>Quản lý trực tiếp</span>
           </th>
-          <td mat-cell *matCellDef="let r" style="text-align: center;">
-            <div style="cursor: pointer;" (click)="openQuanLyTrucTiepEdit(r.Username, r.DirectManager)">
+          <td mat-cell *matCellDef="let r" style="text-align: center">
+            <div style="cursor: pointer" (click)="openQuanLyTrucTiepEdit(r.Username, r.DirectManager)">
               <span *ngIf="r.DirectManager != ''">{{ r.DirectManager }}</span>
               <span *ngIf="r.DirectManager == ''">
                 <mat-icon>person_add</mat-icon>
@@ -70,8 +85,7 @@
             <span>Tình trạng</span>
           </th>
           <td mat-cell *matCellDef="let r" style="text-align: center">
-            <mat-slide-toggle class="example-margin" (click)="changeTinhTrang(r.Username)" [checked]="r.IsActive">
-            </mat-slide-toggle>
+            <mat-slide-toggle class="example-margin" (click)="changeTinhTrang(r.Username)" [checked]="r.IsActive"> </mat-slide-toggle>
           </td>
         </ng-container>
 
@@ -89,25 +103,32 @@
             <span>Thao tác</span>
           </th>
           <td mat-cell *matCellDef="let r" style="text-align: center">
-            <mat-icon (click)="update(r)" style="cursor: pointer; color: #1BC5BD; font-size:16px" aria-hidden="false">
-              mode_edit</mat-icon>
+            <mat-icon (click)="update(r)" style="cursor: pointer; color: #1bc5bd; font-size: 16px" aria-hidden="false"> mode_edit</mat-icon>
             &nbsp;
-            <mat-icon (click)="delete(r)" style="cursor: pointer; color: red; font-size:16px" aria-hidden="false">delete
-            </mat-icon>
+            <mat-icon (click)="delete(r)" style="cursor: pointer; color: red; font-size: 16px" aria-hidden="false">delete </mat-icon>
           </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="row.highlighted = !row.highlighted;"
-          [ngClass]="{ hovered: row.hovered, highlighted: row.highlighted }" (mouseover)="row.hovered = true"
-          (mouseout)="row.hovered = false"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: displayedColumns"
+          (click)="row.highlighted = !row.highlighted"
+          [ngClass]="{ hovered: row.hovered, highlighted: row.highlighted }"
+          (mouseover)="row.hovered = true"
+          (mouseout)="row.hovered = false"
+        ></tr>
       </table>
     </div>
     <!-- start: BOTTOM -->
     <div class="mat-table__bottom">
-      <mat-spinner [diameter]="20" *ngIf="dataSource.loading$| async"></mat-spinner>
-      <mat-paginator [pageSize]="pageSize" [pageSizeOptions]="[10, 20, 50, 100]"
-        [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
+      <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
+      <mat-paginator
+        [pageSize]="pageSize"
+        [pageSizeOptions]="[10, 20, 50, 100]"
+        [length]="dataSource.paginatorTotal$ | async"
+        [showFirstLastButtons]="true"
+      ></mat-paginator>
     </div>
     <!-- end: BOTTOM -->
   </div>
