--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/jee-comment.scss
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/jee-comment.scss
@@ -6,7 +6,6 @@ $background-comment: white;
 
 .card-body {
   padding: 0px 10px 20px 10px;
-
 }
 
 .comment-container {
@@ -23,14 +22,14 @@ $background-comment: white;
   align-items: stretch;
   direction: ltr;
   margin: 0px;
-  border-radius: $border-radius ;
+  border-radius: $border-radius;
   background-color: $background-comment;
   display: block;
   line-height: 16.08px;
 }
 
 .comment-header-container {
-  font-family: "Roboto";
+  font-family: 'Roboto';
   background-color: $background-comment;
   align-items: stretch;
   box-sizing: border-box;
@@ -57,7 +56,7 @@ $background-comment: white;
   justify-content: center;
   font-size: $font-szie-header;
   padding: 6px 2px 6px 2px;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   color: $font-color-header;
 }
 
@@ -68,7 +67,8 @@ $background-comment: white;
 }
 
 .comment-content-container {
-  font-family: "Roboto";
+  padding-left: 16px;
+  font-family: 'Roboto';
   position: relative;
   box-sizing: border-box;
   display: flex;
@@ -114,14 +114,14 @@ $background-comment: white;
   min-height: 44px;
   display: flex;
   flex-direction: row;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   align-items: center;
   vertical-align: middle;
   font-size: 13px;
   direction: ltr;
 }
 
-.post-comment-avatar {
+.avatar-comment {
   display: block;
   position: relative;
   margin-right: 6px;
@@ -133,7 +133,7 @@ $background-comment: white;
   direction: ltr;
   flex-grow: 1;
   background-color: $hover-color;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   border-radius: 18px;
   padding-top: 6px;
   padding-bottom: 6px;
@@ -285,7 +285,9 @@ $background-comment: white;
 }
 
 @keyframes spinnercustom {
-  to {transform: rotate(360deg);}
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .spinner:before {
@@ -301,7 +303,7 @@ $background-comment: white;
   border-radius: 50%;
   //border: 2px solid #ffffff;
   //border-top-color: #000000;
-  animation: spinnercustom .8s linear infinite;
+  animation: spinnercustom 0.8s linear infinite;
 }
 
 .show-error {
@@ -310,4 +312,3 @@ $background-comment: white;
   text-align: center;
   font-weight: 600;
 }
-
