--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/post-comment-content/post-comment-content.component.scss
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/post-comment-content/post-comment-content.component.scss
@@ -37,18 +37,37 @@ ul {
   flex-shrink: 1;
 }
 
+.content-comment {
+  display: flex;
+  flex-direction: row;
+  padding-top: 4px;
+  position: relative;
+  text-align: left;
+  direction: ltr;
+}
+
+.post-commment-value {
+  direction: ltr;
+  display: block;
+  flex-basis: 0px;
+  flex-grow: 1;
+  text-align: left;
+  overflow: hidden;
+  padding-right: 16px;
+}
+
 .post-comment {
   min-height: 44px;
   display: flex;
   flex-direction: row;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   align-items: center;
   vertical-align: middle;
   font-size: 13px;
   direction: ltr;
 }
 
-.post-comment-avatar {
+.avatar-comment {
   display: block;
   position: relative;
   margin-right: 6px;
@@ -66,7 +85,7 @@ ul {
   direction: ltr;
   flex-grow: 1;
   background-color: $hover-color;
-  font-family: "Roboto";
+  font-family: 'Roboto';
   border-radius: 18px;
   padding-top: 6px;
   padding-bottom: 6px;
@@ -75,8 +94,8 @@ ul {
   cursor: text;
   justify-content: flex-end;
   position: relative;
-  padding-right: 10px;
-  padding-left: 10px;
+  padding-right: 18px;
+  padding-left: 15px;
 }
 
 .textarea-input {
@@ -104,12 +123,6 @@ ul {
   align-items: center;
   align-self: flex-end;
   cursor: pointer;
-  margin-inline-end: 4px;
-  margin-inline-start: -8px;
-  margin-right: 4px;
-  margin-left: -8px;
-  margin-block-end: 0;
-  margin-block-start: 0;
 
   .icon {
     margin-left: 6px;
@@ -171,7 +184,7 @@ ul {
   align-items: end;
   .input-comment-span {
     font-weight: normal;
-    font-family: "Roboto";
+    font-family: 'Roboto';
     text-align: left;
   }
 }
@@ -187,35 +200,61 @@ ul {
   color: black;
 }
 
-.post-comment-image {
-  padding-left: 48px;
-  padding-top: 0px;
+.post-attach {
   display: flex;
+  direction: ltr;
+  text-align: left;
+  max-width: none;
+  flex-direction: column;
+}
+
+.post-comment-reaction-show {
+  display: block;
+  position: absolute;
+  &.show-text {
+    bottom: -2px;
+    right: 14px;
+  }
+  &.show-image {
+    bottom: -11px;
+    right: 30px;
+  }
+  &.show-video {
+    bottom: -11px;
+    right: 30px;
+  }
+}
+
+.post-comment-image {
+  padding-top: 0px;
+  display: block;
   flex-wrap: wrap;
+  max-width: 75%;
+  position: relative;
   img {
     border: 0;
-    max-height: 37.5vh;
-    max-width: 25vw;
     padding-bottom: 5px;
     padding-right: 5px;
     border-radius: 18px;
+    width: 100%;
   }
 }
 .post-comment-video {
-  padding-left: 48px;
   padding-top: 0px;
+  position: relative;
+  max-width: 75%;
   video {
     display: block;
-    max-width: 100%;
+    width: 100%;
   }
 }
 
 .post-comment-file {
-  padding-left: 48px;
   padding-top: 0px;
   display: flex;
   flex-direction: row;
   img {
+    color: black;
     width: 18px;
   }
 
@@ -224,15 +263,13 @@ ul {
   }
 }
 
-
 .list-comment-reply {
-  padding-left: 55px;
+  padding-left: 46px;
 }
 
 .bottom-comment {
-  display: block;
-  padding-left: 60px;
-  padding-top: 8px;
+  display: inline-block;
+  margin-left: 12px;
 }
 
 .bottom-comment-action {
