--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/reaction-comment-content/reaction-comment-content.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/reaction-comment-content/reaction-comment-content.component.html
@@ -1,4 +1,4 @@
-<div class="reaction">
+<div class="reaction" *ngIf="!(isLoading$ | async)">
   <div class="reaction-icon">
     <div class="icon-reaction">
       <div class="icon-reaction-emotion">
