--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/post-comment-content/post-comment-content.component.scss
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/post-comment-content/post-comment-content.component.scss
@@ -4,6 +4,7 @@ $font-color-header: rbg(28, 30, 33);
 $hover-color: #f2f2f2;
 $background-comment: white;
 $icon-color: black;
+$max-width-img-video: 75%;
 
 ul {
   list-style-type: none;
@@ -172,8 +173,8 @@ ul {
   vertical-align: middle;
   align-items: center;
   justify-content: center;
-  margin-left: 5px;
-  margin-right: 10px;
+  margin-left: 11px;
+  margin-right: 15px;
 }
 
 .post-comment-input-title {
@@ -229,7 +230,8 @@ ul {
   padding-top: 0px;
   display: block;
   flex-wrap: wrap;
-  max-width: 75%;
+  max-width: $max-width-img-video;
+  max-height: $max-width-img-video;
   position: relative;
   img {
     border: 0;
@@ -242,7 +244,8 @@ ul {
 .post-comment-video {
   padding-top: 0px;
   position: relative;
-  max-width: 75%;
+  max-width: $max-width-img-video;
+  max-height: $max-width-img-video;
   video {
     display: block;
     width: 100%;
@@ -280,16 +283,26 @@ ul {
 }
 
 .hover-icon {
-  padding: 5px;
+  display: flex;
+  cursor: pointer;
 }
 .hover-icon:hover {
-  padding: 5px;
-  border-radius: 50%;
-  background-color: $hover-color;
+  display: flex;
+  cursor: pointer;
 }
 
 .hover-icon:hover > .show-when-hover {
   visibility: visible;
+  display: flex;
+  height: 16px;
+  width: 16px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100px;
+  background-color: $hover-color;
+  color: red;
+  width: 30px;
+  height: 30px;
 }
 
 .show-when-hover {
